# dl2_lfd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  angelovMover.py  animation.py  arm_joint_names.txt  autoencoder.py  averageSingleDemoResults.py  chartResults.py  cnn_control.ipynb  cnn_control.py  collateGeneralizedDemoResults.py  constraints.py  convertDemoToSingleFile.py  convertMessyJsonL.py  cup_pour.py  domains.py  elaborateDMP.py  fitDMPwithConstraints.py  frame_as_posestamped.py  frozenResnetTrainer.py  gen_robot_model_joint_names.py  imageAndDepth.py  imageOnlyTrain.py  imageTrain.py  interpolationExperiments.py  jointsAndStateTrain.py  loadAndChartDMP.py  loadTimeTest.py  load_data.py  mdn.py  model.py  movementDistances.py  oneShotCurveMaker.py  oracle.py  package.xml  play_constrained_dmp.py  play_demo.py  play_demo_vive.py  (+7 more)
config/: constant_joint_names.txt  experiment_config.json  image_params.json  nn_joint_names.txt  pr2.xml
data_gen/: cubicSplineMaker.py  curve_funcs.py
dl2lib/: diffsat.py
dmps/: chart_learned_dmp.py  dmp.py  fit_dmp_joints.py  fit_dmp_nn.py  fit_dmp_pose.py  fit_dmp_pose_saved.py  play_dmp_joints.py  play_dmp_pose.py  play_shifted_dmp.py  simpleWaves.py
helper_funcs/: conversions.py  convert_fnames.py  gc.py  rm.py  search_vels.py  transforms.py  utils.py  utils_image.py
launch/: nn_control.launch  teleop_control.launch  teleop_setup.launch
nns/: autoencoder.py  dmp_nn.py  frozenResnetTrainer.py  jointsAndStateTrain.py  load_data.py  mdn.py  model.py
robotic_interfacing/: angelovController.py  cup_pour.py  (+3 more)
(+23 files in other folders)
