<?xml version="1.0"?>
<package format="2">
  <name>dl2_lfd</name>
  <version>0.0.0</version>
  <description>The dl2_lfd package</description>
  <maintainer email="craig.innes@ed.ac.uk">Craig</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
